# first_game

./: CMakeLists.txt  README.md
include/: entity.h  game.h  player.h  sfml.h  terrain.h
src/: game.cpp  main.cpp  player.cpp  terrain.cpp
